--- a/archive.html
+++ b/archive.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - Archives</title>
+        <title>Dave Laing - Archives</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     </head>
@@ -18,12 +18,7 @@
             <ul class="nav navbar-nav">
                 <li role="presentation"><a href="./">Home</a></li>
                 <li role="presentation"><a href="./about.html">About</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects and Series <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Coming soon</a></li>
-                    </ul>
-                </li>
+                <li role="presentation"><a href="./projects.html">Projects and Series</a></li>
                 <li role="presentation"><a href="./talks.html">Talks</a></li>
                 <li role="presentation"><a href="./archive.html">Archive</a></li>
             </ul>
