--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,17 @@
 
         <div class="container">
             
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title"><a href="http://github.com/dalaing/oneleft">One Left</a></h3>
+    </div>
+    <div class="panel-body">
+        <p>This is just a test</p>
+    </div>
+</div>
+
+
+
 
 
             <div class="row">
@@ -42,5 +53,15 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-59162164-1', 'auto');
+  ga('send', 'pageview');
+</script>
+
     </body>
 </html>
