--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="./">Dave Laing</a>
             </div>
             <ul class="nav navbar-nav">
-                <li role="presentation"><a href="./">Home</a></li>
+                <li role="presentation" class="active"><a href="./">Home</a></li>
                 <li role="presentation"><a href="./about.html">About</a></li>
                 <li role="presentation"><a href="./projects.html">Projects and Series</a></li>
                 <li role="presentation"><a href="./talks.html">Talks</a></li>
