--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li role="presentation"><a href="./">Home</a></li>
-                <li role="presentation"><a href="./about.html">About</a></li>
+                <li role="presentation" class="active"><a href="./about.html">About</a></li>
                 <li role="presentation"><a href="./projects.html">Projects and Series</a></li>
                 <li role="presentation"><a href="./talks.html">Talks</a></li>
                 <li role="presentation"><a href="./archive.html">Archive</a></li>
