--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
             <ul class="nav navbar-nav">
                 <li role="presentation"><a href="./">Home</a></li>
                 <li role="presentation"><a href="./about.html">About</a></li>
-                <li role="presentation"><a href="./projects.html">Projects and Series</a></li>
+                <li role="presentation" class="active"><a href="./projects.html">Projects and Series</a></li>
                 <li role="presentation"><a href="./talks.html">Talks</a></li>
                 <li role="presentation"><a href="./archive.html">Archive</a></li>
             </ul>
