Moved the first post to intro text on the main page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 title: Home
 ---
 
+<p>Welcome to my site.</p>
+
+<p>This is intended partly as a landing page for various things that I've done or am doing, and partly as place for one-shot blog posts.</p>
+
+<p>The hope is that most of the interesting stuff will be linked from the "Project and Series" tab at the top of the page.</p>
+
 $for(posts)$
 $partial("templates/post.html")$
 $endfor$
@@ -11,6 +17,6 @@ $if(more)$
  <button type="button" class="btn btn-default btn-block">
      More
  </button>
- </a>
- $endif$
- <br />
+</a>
+$endif$
+<br />
