--- a/projects.html
+++ b/projects.html
@@ -31,11 +31,11 @@
             
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title"><a href="http://github.com/dalaing/cofun">Cofun with comonads</a></h3>
+        <h3 class="panel-title"><a href="http://dalaing.org/cofun">Cofun with cofree comonads</a></h3>
     </div>
     <div class="panel-body">
         <p>I’ve been accepted to give a talk on cofree comonads at YOW! Lambda Jam 2015, and there’s a lot of material that I’m excited about and won’t have time to get into during the talk slot.</p>
-<p>Keep an eye on this space, because I’ll be blogging about various interesting techniques, experiments and distractions related to comonads, comonad transformers and cofree comonads once I get the talk locked down.</p>
+<p>I’m putting some <a href="http://dlaing.org/cofun">supporting materials</a> online, and I’ll be adding some blog posts there about various related bits and peices that I’ve had in my queue for a while.</p>
     </div>
 </div>
 
