--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,9 @@
         <h3 class="panel-title"><a href="http://dalaing.org/cofun">Cofun with cofree comonads</a></h3>
     </div>
     <div class="panel-body">
-        <p>I’ve been accepted to give a talk on cofree comonads at YOW! Lambda Jam 2015, and there’s a lot of material that I’m excited about and won’t have time to get into during the talk slot.</p>
-<p>I’m putting some <a href="http://dlaing.org/cofun">supporting materials</a> online, and I’ll be adding some blog posts there about various related bits and peices that I’ve had in my queue for a while.</p>
+        <p>I’ve recently given a talk on cofree comonads at YOW! Lambda Jam 2015, and there’s a lot of material that I’m excited about and didn’t have time to get into during the talk slot.</p>
+<p>I’ve put <a href="http://dlaing.org/cofun">supporting materials</a> online, including the slides, the associated code, and links for further reading.</p>
+<p>I’ll be adding blog posts there, covering both the contents of the talk and also various related bits and peices that I’ve had in my queue for a while.</p>
     </div>
 </div>
 
