--- a/about.html
+++ b/about.html
@@ -30,8 +30,9 @@
         <div class="container">
             <h3 id="who-i-am">Who I am</h3>
 <p>My name is Dave Laing.</p>
-<p>I’m currently a Senior Software Engineer for Skedulo, writing Scala and Scalaz to keep the scheduling engine ticking over.</p>
-<p>In the past I’ve done Java, Python and C++ as various places, and I’ve also done a Phd in Computer Science.</p>
+<p>I’m currently a Senior Software Engineer for <a href="http://skedulo.com/">Skedulo</a>, writing Scala and Scalaz to keep the scheduling engine ticking over,</p>
+<p>I’m also a co-organizer of <a href="http://www.bfpg.org">BFPG</a>, aka the Brisbane Functional Programming Group. If you’re in or visiting Brisbane and interested in functional programming, you should come along.</p>
+<p>In the past I’ve done Java, Python, x86 assembly and C++ at various places, and I’ve also done a Phd in Computer Science.</p>
 <p>I’m very interested in functional programming, programming language theory, and various associated branches of mathematics. I’m also a huge fan of Haskell.</p>
 <p>Those are the kinds of things you’re likely to see around here.</p>
 <h3 id="getting-in-touch">Getting in touch</h3>
