--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
             
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title"><a href="http://dalaing.org/cofun">Cofun with cofree comonads</a></h3>
+        <h3 class="panel-title"><a href="http://dlaing.org/cofun">Cofun with cofree comonads</a></h3>
     </div>
     <div class="panel-body">
         <p>I’ve recently given a talk on cofree comonads at YOW! Lambda Jam 2015, and there’s a lot of material that I’m excited about and didn’t have time to get into during the talk slot.</p>
