--- a/talks.html
+++ b/talks.html
@@ -95,7 +95,7 @@
 
         <p>
 
-        <a href="https://www.youtube.com/watch?v=qNeRZS8ZCKw">Vimeo link</a>
+        <a href="https://www.youtube.com/watch?v=qNeRZS8ZCKw">Video link</a>
 
 
 
@@ -127,7 +127,7 @@
 
         <p>
 
-        <a href="http://vimeo.com/92992647">Vimeo link</a>
+        <a href="http://vimeo.com/92992647">Video link</a>
 
 
 
@@ -159,7 +159,7 @@
 
         <p>
 
-        <a href="http://vimeo.com/88540533">Vimeo link</a>
+        <a href="http://vimeo.com/88540533">Video link</a>
 
 
 
@@ -191,7 +191,7 @@
 
         <p>
 
-        <a href="http://vimeo.com/69878989">Vimeo link</a>
+        <a href="http://vimeo.com/69878989">Video link</a>
 
 
 
@@ -223,7 +223,7 @@
 
         <p>
 
-        <a href="http://vimeo.com/62757082">Vimeo link</a>
+        <a href="http://vimeo.com/62757082">Video link</a>
 
 
 
