--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,19 @@
             
 <div class="panel panel-default">
     <div class="panel-heading">
+        <h3 class="panel-title"><a href="http://dlaing.org/falling-blocks">Falling Blocks</a></h3>
+    </div>
+    <div class="panel-body">
+        <p>I’ve been meaning to play around with <code>sdl2</code> and <code>FRPNow</code> for a while now, and so I’ve started work on a “falling blocks” game.</p>
+<p>I’ve been blogging about it as I go. I am trying to use it to demonstrate a handful of techniques and packages which I believe have a really good power-to-weight ratio, and am also going to be playing with some packages which are totally new to me as well.</p>
+<p>More details are avaialable <a href="http://dlaing.org/falling-blocks">here</a>.</p>
+    </div>
+</div>
+
+
+
+<div class="panel panel-default">
+    <div class="panel-heading">
         <h3 class="panel-title"><a href="http://dlaing.org/cofun">Cofun with cofree comonads</a></h3>
     </div>
     <div class="panel-body">
