--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
         <h3 class="panel-title"><a href="http://dlaing.org/falling-blocks">Falling Blocks</a></h3>
     </div>
     <div class="panel-body">
-        <p>I’ve been meaning to play around with <code>sdl2</code> and <code>FRPNow</code> for a while now, and so I’ve started work on a “falling blocks” game.</p>
+        <p>I’ve been meaning to play around with <code>sdl2</code> and <code>frpnow</code> for a while now, and so I’ve started work on a “falling blocks” game.</p>
 <p>I’ve been blogging about it as I go. I am trying to use it to demonstrate a handful of techniques and packages which I believe have a really good power-to-weight ratio, and am also going to be playing with some packages which are totally new to me as well.</p>
 <p>More details are avaialable <a href="http://dlaing.org/falling-blocks">here</a>.</p>
     </div>
