--- a/talks.html
+++ b/talks.html
@@ -39,6 +39,8 @@
 
         <p>
 
+        <a href="https://yow.eventer.com/yow-lambda-jam-2015-1305/cofun-with-cofree-comonads-by-david-laing-1891">Video link</a>
+
 
 
         <a href="https://github.com/dalaing/cofun">Slides and code</a>
