--- a/about.html
+++ b/about.html
@@ -30,11 +30,11 @@
         <div class="container">
             <h3 id="who-i-am">Who I am</h3>
 <p>My name is Dave Laing.</p>
-<p>I’m currently a Senior Software Engineer for <a href="http://skedulo.com/">Skedulo</a>, writing Scala and Scalaz to keep the scheduling engine ticking over.</p>
+<p>I’ve been programming since 2002, variously using Scala, Java, Python, x86 assembly and C++. There was a PhD in Computer Science somewhere in the middle.</p>
 <p>I’m also a co-organizer of <a href="http://www.bfpg.org">BFPG</a>, aka the Brisbane Functional Programming Group. If you’re in or visiting Brisbane and interested in functional programming, you should come along.</p>
-<p>In the past I’ve done Java, Python, x86 assembly and C++ at various places, and I’ve also done a PhD in Computer Science.</p>
 <p>I’m very interested in functional programming, programming language theory, and various associated branches of mathematics. I’m also a huge fan of Haskell.</p>
 <p>Those are the kinds of things you’re likely to see around here.</p>
+<p>I’m always keen to have a chat about any interesting opportuntities that might be around.</p>
 <h3 id="getting-in-touch">Getting in touch</h3>
 <dl>
 <dt>Email</dt>
