--- a/projects.html
+++ b/projects.html
@@ -31,12 +31,11 @@
             
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title"><a href="http://dlaing.org/falling-blocks">Falling Blocks</a></h3>
+        <h3 class="panel-title"><a href="http://dlaing.org/little-languages">Little Languages</a></h3>
     </div>
     <div class="panel-body">
-        <p>I’ve been meaning to play around with <code>sdl2</code> and <code>frpnow</code> for a while now, and so I’ve started work on a “falling blocks” game.</p>
-<p>I’ve been blogging about it as I go. I am trying to use it to demonstrate a handful of techniques and packages which I believe have a really good power-to-weight ratio, and am also going to be playing with some packages which are totally new to me as well.</p>
-<p>More details are avaialable <a href="http://dlaing.org/falling-blocks">here</a>.</p>
+        <p>It’s about time for YOW! Lambda Jam 2016, and I’m presenting a talk on domain-specific languages (DSLs).</p>
+<p>Over time I’ll be putting <a href="http://dlaing.org/little-languages">supporting materials</a> online, including a series of blog posts, the slides, the associated code, and links for further reading.</p>
     </div>
 </div>
 
