--- a/talks.html
+++ b/talks.html
@@ -39,11 +39,11 @@
 
         <p>
 
-        <a href="https://yow.eventer.com/yow-lambda-jam-2015-1305/cofun-with-cofree-comonads-by-david-laing-189://www.youtube.com/watch?v=CZp9IFgFFts">Video link</a>
+        <a href="https://www.youtube.com/watch?v=CZp9IFgFFts">Video link</a>
 
 
 
-        <a href="https://github.com/dalaing/little-langauges">Slides and code</a>
+        <a href="https://github.com/dalaing/little-languages">Slides and code</a>
 
         </p>
 
