--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
 
         <div class="container">
             <h3 id="who-i-am">Who I am</h3>
-<p>My name is Dave Laing.</p>
-<p>I’ve been programming since 2002, variously using Scala, Java, Python, x86 assembly and C++. There was a PhD in Computer Science somewhere in the middle.</p>
+<p>My name is Dave Laing. I’m currently a Senior Functional Programmer at the Data61 FP Lab.</p>
+<p>I’ve been programming professionally since 2002, variously using Scala, Java, Python, x86 assembly and C++. There was a PhD in Computer Science somewhere in the middle.</p>
 <p>I’m also a co-organizer of <a href="http://www.bfpg.org">BFPG</a>, aka the Brisbane Functional Programming Group. If you’re in or visiting Brisbane and interested in functional programming, you should come along.</p>
 <p>I’m very interested in functional programming, programming language theory, and various associated branches of mathematics. I’m also a huge fan of Haskell.</p>
 <p>Those are the kinds of things you’re likely to see around here.</p>
@@ -38,12 +38,7 @@
 <h3 id="getting-in-touch">Getting in touch</h3>
 <dl>
 <dt>Email</dt>
-<dd><p><script type="text/javascript">
-<!--
-h='&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;';a='&#64;';n='&#100;&#x61;&#118;&#x65;&#46;&#108;&#x61;&#x69;&#110;&#x67;&#46;&#56;&#48;';e=n+a+h;
-document.write('<a h'+'ref'+'="ma'+'ilto'+':'+e+'" clas'+'s="em' + 'ail">'+e+'<\/'+'a'+'>');
-// -->
-</script><noscript>dave.laing.80 at gmail dot com</noscript></p>
+<dd><p><a href="mailto:dave.laing.80@gmail.com">dave.laing.80@gmail.com</a></p>
 </dd>
 <dt>Github</dt>
 <dd><p><a href="https://github.com/dalaing" class="uri">https://github.com/dalaing</a></p>
