--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
   ga('create', 'UA-59162164-1', 'auto');
   ga('send', 'pageview');
+  ga('set', 'anonymizeIp', true);
 </script>
 
     </body>
