--- a/archive.html
+++ b/archive.html
@@ -72,6 +72,7 @@
 
   ga('create', 'UA-59162164-1', 'auto');
   ga('send', 'pageview');
+  ga('set', 'anonymizeIp', true);
 </script>
 
     </body>
